k8s_1.8.4/traefik+ingress/ingress/test_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /svc-app01path
        backend:
          serviceName: svc-app01
          servicePort: 80
